# django-movie-reservation

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
MovieReservation/: settings.py  urls.py  wsgi.py
MovieReservation/settings/: base.py  development.py  jazzmin_settings.py  rest_settings.py
apps/account_app/: admin.py  apps.py  decorators.py  forms.py  managers.py  models.py  permissions.py  serializer.py  urls.py  utils.py  views.py
apps/account_app/migrations/: 0001_initial.py
apps/movie_app/: admin.py  apps.py  decorators.py  models.py  permissions.py  serializer.py  urls.py  views.py
apps/movie_app/management/commands/: generate_fake_data.py
apps/movie_app/migrations/: 0001_initial.py  0002_movie_movieposter.py  0003_showtime.py  0004_seat.py  0005_reservation.py  0006_alter_reservation_options.py  0007_reservation_user_reservation.py  0008_alter_moviegenre_is_active.py
utils/: custom_decorator.py
